--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,18 @@
 body {
+  color: aliceblue;
   margin: 0;
   text-align: center;
   background-color: rgb(25, 1, 44);
   overscroll-behavior: none;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
+  font-family: Consolas, Lucida Console, monospace;
 }
 
 #canvas {
   background-color: white;
-}
-
-h1 {
-  color: white;
-  font-family: "Sofia", "Audiowide", sans-serif;
 }
 
 .button-row {
@@ -27,7 +25,11 @@ h1 {
 }
 
 #clear-btn {
-  background-color: #27cd67 !important;
+  background-color: #27cd67;
+}
+
+#undo-btn {
+  background-color: #ee5348;
 }
 
 .button-53 {
