--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,20 @@ body {
   font-family: Consolas, Lucida Console, monospace;
 }
 
+h1 {
+  margin-top: 50px;
+}
+
+#subtitle {
+  margin-top: -20px;
+  width: 400px;
+  font-size: 15px;
+}
+
+#info {
+  width: 400px;
+}
+
 #canvas {
   background-color: white;
 }
@@ -24,45 +38,44 @@ body {
   gap: 10px;
 }
 
+#start-btn {
+  margin-left: 10px;
+}
+
 #clear-btn {
   background-color: #27cd67;
 }
 
 #undo-btn {
   background-color: #ee5348;
+  margin-left: 10px;
+}
+
+#user {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #333;
+}
+
+#user:focus {
+  outline: none;
+  border-color: #5b9dd9;
+  box-shadow: 0 0 5px #5b9dd9;
 }
 
 .button-53 {
-  background-color: #3dd1e7;
   border: 0 solid #e5e7eb;
   box-sizing: border-box;
-  color: #000000;
-  display: flex;
-  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Consolas;
   font-weight: bold;
-  justify-content: center;
   line-height: 1rem;
-  padding: 0.75rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 100%;
-  max-width: 460px;
   position: relative;
   cursor: pointer;
   transform: rotate(-2deg);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 70px;
-  height: 40px;
-}
-
-.button-53:focus {
-  outline: 0;
+  width: 65px;
+  height: 35px;
 }
 
 .button-53:after {
