--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -92,3 +92,33 @@ h1 {
   bottom: 2px;
   left: 2px;
 }
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.row-Label {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.drawings-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.drawing-container {
+  background-color: white;
+  text-align: center;
+  border-radius: 5%;
+  margin: 4px;
+  color: #000000;
+}
+.drawing {
+  max-width: 120px;
+}
