--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,14 +1,17 @@
 body {
-  color: aliceblue;
   margin: 0;
-  text-align: center;
   background-color: rgb(25, 1, 44);
+  font-family: Consolas, Lucida Console, monospace;
   overscroll-behavior: none;
+}
+
+.main {
+  color: aliceblue;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  font-family: Consolas, Lucida Console, monospace;
 }
 
 h1 {
@@ -96,29 +99,41 @@ h1 {
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 30px;
+  margin-left: 50px;
 }
 
-.row-Label {
+.row-label {
+  flex: 1 1 0;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-}
-
-.drawings-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  color: white;
 }
 
 .drawing-container {
+  flex: 1 1 0;
   background-color: white;
   text-align: center;
-  border-radius: 5%;
-  margin: 4px;
-  color: #000000;
+  border-radius: 10%;
+  margin: 1px;
+  overflow: hidden;
 }
+
 .drawing {
-  max-width: 120px;
+  width: 100%;
+}
+
+.highlight {
+  background-color: yellow;
+}
+
+#container {
+  width: calc(100% - 500px);
+}
+
+#chartContainer {
+  position: fixed;
+  right: 50px;
+  top: 50%;
+  transform: translate(0, -50%);
 }
