--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -3,6 +3,8 @@ body {
   background-color: rgb(25, 1, 44);
   font-family: Consolas, Lucida Console, monospace;
   overscroll-behavior: none;
+  overflow-x: hidden;
+  text-decoration: none;
 }
 
 .main {
@@ -14,31 +16,85 @@ body {
   gap: 20px;
 }
 
+/* Navbar  */
+
+.navbar {
+  position: sticky;
+  height: 60px;
+  width: 100%;
+  top: 0;
+  padding: 10px;
+  z-index: 100;
+  background-color: rgb(25, 1, 44);
+  box-shadow: 0 2px 4px rgba(228, 212, 212, 0.5);
+}
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  gap: 50px;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .navbar-list {
+    justify-content: center;
+    margin-left: -40px;
+  }
+}
+
+.navbar-item {
+  cursor: pointer;
+  height: 27px;
+}
+
+#navbar-btn {
+  width: 80px;
+  padding: 5px;
+  background-color: rgb(170, 32, 142);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  margin-top: -2px;
+}
+
+.active {
+  border-bottom: 1px solid rgb(46, 151, 14);
+}
+
+.navbar-item:hover {
+  transition: border-bottom 0.5s ease-in-out;
+  border-bottom: 1px solid blueviolet;
+}
+
 h1 {
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #subtitle {
   margin-top: -20px;
   width: 400px;
   font-size: 15px;
+  margin-bottom: 30px;
 }
 
 #info {
+  margin-bottom: 10px;
   width: 400px;
 }
 
-#canvas {
+canvas {
   background-color: white;
 }
 
 .button-row {
+  margin-top: 10px;
   width: 400px;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
-  justify-content: flex-start;
   gap: 10px;
+  justify-content: center;
 }
 
 #start-btn {
@@ -68,6 +124,100 @@ h1 {
   box-shadow: 0 0 5px #5b9dd9;
 }
 
+.row {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.row-label {
+  flex: 1 1 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  color: white;
+}
+
+.drawing-container {
+  flex: 1 1 0;
+  background-color: white;
+  color: black;
+  text-align: center;
+  border-radius: 10%;
+  margin: 1px;
+  overflow: hidden;
+}
+
+.drawing {
+  width: 100%;
+}
+
+.highlight {
+  background-color: yellow;
+}
+
+#container {
+  width: calc(100% - 500px);
+  margin-bottom: 100px;
+}
+
+#chartContainer {
+  position: fixed;
+  right: 50px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+#smartPadContainer {
+  position: fixed;
+  right: 50%;
+  top: calc(50% + 22px);
+  transform: translate(0, -50%);
+}
+
+#smartPadContainer > canvas {
+  outline: 10000px solid rgba(0, 0, 0, 0.8);
+}
+
+@media only screen and (max-width: 928px) {
+  #smartPad {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  #smartPadContainer {
+    position: relative;
+    right: 0;
+    top: 0;
+    transform: translate(0, 0);
+    margin-bottom: 40px;
+  }
+
+  #chartContainer {
+    position: relative;
+    right: 0;
+    top: 0;
+    transform: translate(0, 0);
+    margin-bottom: 100px;
+  }
+
+  #container {
+    width: 90%;
+    top: 80%;
+    right: 50%;
+  }
+
+  .button-row {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+#drawingPadContainer {
+  width: 400px;
+}
+
+/* Button CSS */
 .button-53 {
   border: 0 solid #e5e7eb;
   box-sizing: border-box;
@@ -94,46 +244,4 @@ h1 {
 .button-53:hover:after {
   bottom: 2px;
   left: 2px;
-}
-
-.row {
-  display: flex;
-  align-items: center;
-  margin-left: 50px;
-}
-
-.row-label {
-  flex: 1 1 0;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  color: white;
-}
-
-.drawing-container {
-  flex: 1 1 0;
-  background-color: white;
-  text-align: center;
-  border-radius: 10%;
-  margin: 1px;
-  overflow: hidden;
-}
-
-.drawing {
-  width: 100%;
-}
-
-.highlight {
-  background-color: yellow;
-}
-
-#container {
-  width: calc(100% - 500px);
-}
-
-#chartContainer {
-  position: fixed;
-  right: 50px;
-  top: 50%;
-  transform: translate(0, -50%);
 }
