--- a/frontend/css/smartPad.css
+++ b/frontend/css/smartPad.css
@@ -1,5 +1,5 @@
 #smartPad-subtitle {
-  max-width: 400px;
+  width: 80%;
   text-align: justify;
   margin-left: auto;
   margin-right: auto;
@@ -66,14 +66,9 @@
   position: relative;
 }
 
-@media only screen and (max-width: 928px) {
+@media only screen and (max-width: 1000px) {
   #smartPad-subtitle {
-    width: 80%;
-    max-width: 100%;
-  }
-
-  #smartPad-subtitle {
-    margin-left: 80px;
+    margin-left: 15%;
   }
 
   #smartPad-h1 {
