--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -22,7 +22,7 @@ canvas {
 
 .button-row {
   margin-top: 10px;
-  width: 400px;
+  max-width: 800px;
   display: flex;
   gap: 10px;
   justify-content: center;
