--- a/frontend/css/smartPad.css
+++ b/frontend/css/smartPad.css
@@ -39,15 +39,24 @@
 }
 
 #drawingsContainer {
-  width: calc(100% - 500px);
+  width: calc(100% - 600px);
   margin-bottom: 100px;
 }
 
+#drawingsContainer > .row {
+  margin-left: 0px;
+}
+
+#decisionContainer,
 #chartContainer {
   position: fixed;
+  top: 55%;
   right: 50px;
-  top: 50%;
   transform: translate(0, -50%);
+  width: 500px;
+  height: 500px;
+  background-color: white;
+  color: black;
 }
 
 #smartPadContainer {
@@ -71,12 +80,58 @@
   background-color: red !important;
 }
 
+.correct {
+  background-color: rgb(94, 180, 94);
+}
+
+/* Decision matrix chart */
+table {
+  border-collapse: collapse;
+  text-align: center;
+  margin-left: 50px;
+  margin-top: 50px;
+}
+
+td {
+  width: 50px;
+  height: 50px;
+  padding: 0;
+}
+
+#cols-title {
+  height: 50px;
+  display: flex;
+  margin-left: 25px;
+  align-items: center;
+  position: absolute;
+  font-size: 20px;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+#rows-title {
+  height: 50px;
+  display: flex;
+  margin-left: 25px;
+  margin-bottom: 25px;
+  align-items: center;
+  position: absolute;
+  font-size: 20px;
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, 0) rotate(-90deg);
+}
+
+/* Responsive page */
 @media only screen and (max-width: 1000px) {
-  #smartPad-subtitle {
+  #smartPad-subtitle,
+  #testing-subtitle {
     margin-left: 15%;
   }
 
-  #smartPad-h1 {
+  #smartPad-h1,
+  #testing-h1 {
     margin-left: 50px;
   }
 
@@ -85,6 +140,7 @@
     justify-content: center;
     flex-direction: column;
   }
+
   #smartPadContainer {
     position: relative;
     right: 0;
@@ -93,7 +149,8 @@
     margin-bottom: 40px;
   }
 
-  #chartContainer {
+  #chartContainer,
+  #decisionContainer {
     position: relative;
     right: 0;
     top: 0;
