--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --card-main-color: white;
+  --card-highlight-color: yellow;
+  --card-correct-color: white;
+  --card-flagged-color: red;
+}
+
 body {
   margin: 0;
   background-color: rgb(25, 1, 44);
