--- a/frontend/css/smartPad.css
+++ b/frontend/css/smartPad.css
@@ -60,6 +60,16 @@
   color: black;
 }
 
+#networkCanvas {
+  position: fixed;
+  top: 55%;
+  right: 50px;
+  transform: translate(0, -50%);
+  width: 500px;
+  height: 500px;
+  background-color: rgb(8, 3, 3);
+}
+
 #smartPadContainer {
   position: fixed;
   right: 50%;
